--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.html",
   "scripts": {
     "start": "http-server -p 8080",
-    "test-auth": "node test-game-auth.js"
+    "test-auth": "node test-game-auth.js",
+    "test-integration": "node test-integration.js"
   },
   "dependencies": {
     "node-fetch": "^2.6.7",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "socket.io-client": "^4.7.2",
+    "axios": "^1.6.2",
+    "crypto-js": "^4.2.0"
   },
   "devDependencies": {},
   "author": "",
